syntax = "proto3";

package sample.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
// imports are relative to the module root; in this case our module
// root is set to the `proto` directory.
import "sample/v1/model.proto";

// OpenAPI settings.
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  swagger: "2.0"
  schemes: HTTP
  schemes: HTTPS
  schemes: WSS
  consumes: "application/json"
  consumes: "application/protobuf"
  produces: "application/json"
  produces: "application/protobuf"
  info: {
    title: "Foo API"
    version: "0.1.0"
    contact: {
      name: "John Doe"
      email: "john.dow@example.com"
    }
  }
  security_definitions: {
    security: {
      key: "bearer"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
        description: "Authentication token provided as: 'Bearer {token}'"
      }
    }
  }
  security: {
    security_requirement: {key: "bearer"}
  }
};

// Sample "foo" service server.
service FooAPI {
  // Reachability test.
  rpc Ping(google.protobuf.Empty) returns (Pong) {
    option (google.api.http) = {post: "/foo/ping"};
  }
  // Health test.
  rpc Health(google.protobuf.Empty) returns (HealthResponse) {
    option (google.api.http) = {post: "/foo/health"};
  }
  // Sample request.
  rpc Request(google.protobuf.Empty) returns (Response) {
    option (google.api.http) = {post: "/foo/request"};
  }
  // Returns an error roughly about 20% of the time.
  rpc Faulty(google.protobuf.Empty) returns (DummyResponse) {
    option (google.api.http) = {post: "/foo/faulty"};
  }
  // Exhibit a random latency between 10 and 200ms.
  rpc Slow(google.protobuf.Empty) returns (DummyResponse) {
    option (google.api.http) = {post: "/foo/slow"};
  }
  // Sample server stream request.
  rpc OpenServerStream(google.protobuf.Empty) returns (stream GenericStreamChunk) {
    option (google.api.http) = {
      post: "/foo/server_stream"
      // body: "*";
    };
  }
  // Sample client stream request.
  rpc OpenClientStream(stream OpenClientStreamRequest) returns (StreamResult) {
    option (google.api.http) = {
      post: "/foo/client_stream"
      body: "*"
    };
  }
}

// Generic stream messages returned by the server.
message GenericStreamChunk {
  // Identifier for the endpoint generating the stream message.
  string sender = 1;

  // Message generation UNIX timestamp.
  int64 stamp = 2;
}

// Generic stream messages send by the client.
message OpenClientStreamRequest {
  // Identifier for the endpoint generating the stream message.
  string sender = 1;

  // Message generation UNIX timestamp.
  int64 stamp = 2;
}

// Generic stream result.
message StreamResult {
  // Set to the total number of messages received during the request.
  int64 received = 1;
}
